--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.5",
     "bootstrap": "^4.4.1",
     "moment": "^2.27.0",
+    "ng-image-fullscreen-view": "^1.0.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
