--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run serenichat:serve-ssr",
+    "serve:ssr": "node dist/serenichat/server/main.js",
+    "build:ssr": "ng build --prod && ng run serenichat:server:production",
+    "prerender": "ng run serenichat:prerender"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +24,11 @@
     "@angular/material": "^9.1.2",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
+    "@angular/platform-server": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@nguniversal/express-engine": "^9.0.2",
     "bootstrap": "^4.4.1",
+    "express": "^4.15.2",
     "moment": "^2.27.0",
     "ng-image-fullscreen-view": "^1.0.3",
     "rxjs": "~6.5.4",
@@ -33,6 +40,8 @@
     "@angular/cli": "~9.0.5",
     "@angular/compiler-cli": "~9.0.5",
     "@angular/language-service": "~9.0.5",
+    "@nguniversal/builders": "^9.0.2",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
